@@ -39,10 +39,10 @@ regex1 = ['^' root];
 
 % Safer than calling isoctave directly (this allows stk_config_rmpath to work
 % even if STK has already been partially uninstalled or is not properly installed)
-isoctave_ = (exist ('OCTAVE_VERSION', 'builtin') == 5);
+isoctave = (exist ('OCTAVE_VERSION', 'builtin') == 5);
 
-if isoctave_,
-    regex2 = strrep ([octave_config_info("api_version") '$'], '+', '\+');
+if isoctave,
+    regex2 = strrep ([octave_config_info('api_version') '$'], '+', '\+');
 end
 
 while ~ isempty (s)
@@ -50,7 +50,7 @@ while ~ isempty (s)
     [d, s] = strtok (s, ':');  %#ok<STTOK>
     
     if (~ isempty (regexp (d,  regex1, 'once'))) ...
-        && ((~ isoctave_) || isempty (regexp (d,  regex2, 'once'))) ...
+        && ((~ isoctave) || isempty (regexp (d,  regex2, 'once'))) ...
         && (~ strcmp (d, root))  % See note below
         
         rmpath (d);
